Preventing layout shifts by adding a border by default to interactive elements

--- a/src/styles/specifics/_dropdown.scss
+++ b/src/styles/specifics/_dropdown.scss
@@ -4,8 +4,12 @@
   font-size: f.to-r-em(16);
   background-color: c.$neutral-700;
   border-radius: f.to-r-em(5);
+  border: 0.15em solid c.$neutral-900;
   &:focus {
     outline: 0.1em solid c.$neutral-0;
-    border: 0.15em solid c.$neutral-900;
   }
+}
+
+.hourly .dropdown {
+  border-color: c.$neutral-700;
 }
